--- a/vignettes/promises_08_casestudy.Rmd
+++ b/vignettes/promises_08_casestudy.Rmd
@@ -3,7 +3,7 @@ title: "Case study: converting a Shiny app to async"
 author: Joe Cheng (joe@rstudio.com)
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{8. Case study}
+  %\VignetteIndexEntry{Case study: converting a Shiny app to async}
   %\VignetteEncoding{UTF-8}
   %\VignetteEngine{knitr::rmarkdown}
 ---
